# glowfit-ai

./: .env.example  .gitignore  DESIGN.md  README.md  new_project-threat-model.md  package.json  pyproject.toml  security_best_practices_report.md
.github/workflows/: ci.yml  production-smoke.yml
api/: __init__.py  index.py  main.py
api/tests/: test_api.py
docs/: architecture.md  data-ingestion.md  demo-script.md  deployment.md  evaluation.md  huggingface-hub-catalog.md  huggingface-joined-preview.md  huggingface-preview.md  portfolio-case-study.md  security-test-plan.md  supabase.md
docs/assets/: glowfit-demo.webm
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sample_data/: preferences.json  products.json  raw_amazon_metadata.jsonl  raw_amazon_reviews.jsonl  reviews.json
scripts/: build_sample_artifacts.py  evaluate_public_artifacts.py  evaluate_sample_recommenders.py  fetch_huggingface_hub_catalog.py  fetch_huggingface_joined_preview.py  fetch_huggingface_preview.py  generate_supabase_seed.py  ingest_amazon_beauty_jsonl.py  smoke_deployment.py  verify_supabase_catalog.py
supabase/: config.toml  seed.sql
tests/: test_artifacts.py  test_catalog.py  test_data.py  test_datasets.py  test_evaluation.py  test_evidence.py  test_huggingface_hub_catalog.py  test_huggingface_joined_preview.py  test_huggingface_preview.py  test_ingestion.py  test_models.py  test_nlp.py  test_public_evaluation.py  test_ranking.py  test_sample_evaluation.py  test_security_boundary.py  test_smoke_deployment.py  test_supabase_seed.py
(+40 files in other folders)
